namespace GenSpil.Type
{
    /// <summary>
    /// BoardGames Genre 
    /// </summary>
    public enum Genre
    {
        Familie,
        Børnespil,
        Rollespil,
        Selskab,
        Strategi,
        Quiz
    }
}
